finish main section

--- a/index.html
+++ b/index.html
@@ -81,13 +81,63 @@
                     </div>
                 </div>
             </div>
+            <div class="header-shadow"></div>
         </header>
 
-        <main class="main-wrap">
-            <section class="sec">
+        <main>
+            <section class="main">
                 <div class="container">
-                    <div class="sec-wrap">
-
+                    <div class="main-top">
+                        <div class="title">
+                            Payment Technology
+                            Across Platforms
+                        </div>
+                        <div class="text">All the tools needed for a seamless payment experience across platforms and
+                            industries.</div>
+                        <div class="image">
+                            <img src="./image/main-image.png" alt="">
+                        </div>
+                    </div>
+                    <div class="main-bottom">
+                        <div class="main-bottom__card">
+                            <div class="card-image">
+                                <img src="./image/card-img-1.png" alt="">
+                            </div>
+                            <div class="card-info">
+                                <h5 class="card-info__title">Platform Agnostic</h5>
+                                <p class="card-info__text">
+                                    An innovative platform-agnostic solution that simplifies your merchant portfolio
+                                    management and reduces processing costs. You'll save more money, time, and have a
+                                    healthier business as you invest in new opportunities to grow.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="main-bottom__card">
+                            <div class="card-image">
+                                <img src="./image/card-img-2.png" alt="">
+                            </div>
+                            <div class="card-info">
+                                <h5 class="card-info__title">Cross Borders</h5>
+                                <p class="card-info__text">
+                                    We're building a payment system that will make the world less fragmented. Our
+                                    Payments Orchestration solution is designed to create an inclusive, diversified
+                                    ecosystem for payments in order to support consumers and businesses everywhere.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="main-bottom__card">
+                            <div class="card-image">
+                                <img src="./image/card-img-3.png" alt="">
+                            </div>
+                            <div class="card-info">
+                                <h5 class="card-info__title">Any Payment Service</h5>
+                                <p class="card-info__text">
+                                    Allow your business to transact with virtually any gateway or payment service.
+                                    Giving you the possibility to expand into new markets fast while maintaining your
+                                    payments secure as well as in compliance.
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
