--- a/index.html
+++ b/index.html
@@ -159,8 +159,106 @@
 
         <footer class="footer">
             <div class="container">
-                <div class="footer-wrap">
+                <div class="footer-wrap">+
+                    <div class="footer-warp__top">
+                        <div class="footer-top__1">
+                            <a href="./">
+                                <svg width="131" height="53" viewBox="0 0 131 53" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <g clip-path="url(#clip0_3101_219)">
+                                        <path
+                                            d="M119.948 30.5439L119.204 28.1842C119.029 27.6054 118.547 27.2047 117.978 27.1602H114.649C114.386 27.1602 113.642 27.2937 113.335 28.4068L112.591 30.4994H119.948V30.5439Z"
+                                            fill="#72C7F0" />
+                                        <path
+                                            d="M4.10942 30.5439H12.0364L10.8977 28.1397C10.7664 27.8725 10.5474 27.6054 10.2846 27.4718C10.0656 27.3382 9.80285 27.2492 9.54007 27.1602H0.693359L1.87584 29.3418C1.87584 29.3418 2.35759 30.4994 4.10942 30.5439Z"
+                                            fill="#72C7F0" />
+                                        <path
+                                            d="M56.708 7.88097V4.18555H39.2773V7.88097H45.9781V27.9164H49.7883V7.83645L56.708 7.88097Z"
+                                            fill="#F9F8FF" />
+                                        <path
+                                            d="M127.657 27.9164L119.204 5.38767L119.161 5.29863L119.073 5.12053C118.898 4.6753 118.547 4.31912 118.066 4.18555H114.343C114.036 4.27459 113.774 4.45269 113.555 4.6753L104.839 27.8719H108.956L115.613 9.97356L115.788 9.70642C115.788 9.70642 116.095 8.905 116.708 9.57285L123.146 27.8719H127.657V27.9164Z"
+                                            fill="#F9F8FF" />
+                                        <path
+                                            d="M89.1167 27.427L97.832 4.23047H93.3211L86.7955 22.3959C86.7079 22.6185 86.4452 22.7076 86.2262 22.6185L86.0948 22.5295L79.5254 4.23047H74.9707L83.6422 27.2935C83.8174 27.5606 84.0364 27.7832 84.343 27.8723H88.3722C88.7225 27.7832 88.9415 27.6496 89.1167 27.427Z"
+                                            fill="#F9F8FF" />
+                                        <path
+                                            d="M16.2407 19.3234C16.2407 19.3234 16.2407 20.7036 15.3648 19.546L4.81008 4.76435C4.45971 4.18555 3.18964 4.18555 3.18964 4.18555H0.386719V24.5326H9.14584L8.00716 22.3955C8.00716 22.3955 7.5254 21.1934 5.77358 21.1934H4.28453V12.2888C4.45971 11.2647 5.11665 12.1997 5.11665 12.1997L15.8028 27.2485C16.2845 27.6492 16.8977 27.8273 17.5108 27.8273H19.8758V4.23007H16.2845V19.3234H16.2407Z"
+                                            fill="#F9F8FF" />
+                                        <path
+                                            d="M103.35 27.9164V4.18555H103.306H99.4524V27.9164V27.9609H103.306V27.9164H103.35Z"
+                                            fill="#F9F8FF" />
+                                        <path
+                                            d="M37.4816 24.221H26.2261V17.7206H34.591L33.4524 15.0937C33.1896 14.5149 32.8392 14.1142 31.7881 14.0252H26.2261V7.88097H37.4816V4.18555H22.3721V27.9164H37.4816V24.221Z"
+                                            fill="#F9F8FF" />
+                                        <path
+                                            d="M73.5695 24.221H62.314V17.7206H70.6789L69.5402 15.0937C69.2775 14.5149 68.9271 14.1142 67.876 14.0252H62.314V7.88097H73.5695V4.18555H58.46V27.9164H73.5695V24.221Z"
+                                            fill="#F9F8FF" />
+                                        <path
+                                            d="M0.560525 33.6305L0.55957 33.8086L127.435 34.5208L127.436 34.3427L0.560525 33.6305Z"
+                                            fill="#303030" />
+                                        <path
+                                            d="M0.358176 47.627V38.345H5.14218C7.21351 38.345 8.24918 39.2333 8.24918 41.01C8.24918 41.894 7.98484 42.6003 7.45618 43.129C6.93618 43.649 6.19518 43.909 5.23318 43.909H1.73618V47.627H0.358176ZM1.73618 42.713H5.05118C6.26451 42.713 6.87118 42.154 6.87118 41.036C6.87118 40.5766 6.73684 40.2126 6.46818 39.944C6.19951 39.6753 5.80951 39.541 5.29818 39.541H1.73618V42.713ZM9.80501 47.627V38.345H11.183V46.431H16.825V47.627H9.80501ZM23.6615 43.727L21.8805 39.619L20.1385 43.727H23.6615ZM25.3515 47.627L24.1685 44.923H19.6185L18.4355 47.627H16.9535L21.1525 38.345H22.7255L26.9245 47.627H25.3515ZM29.7468 47.627V39.541H26.2368V38.345H34.6348V39.541H31.1248V47.627H29.7468ZM35.8365 47.627V38.345H37.2145V47.627H35.8365ZM46.8257 47.627L40.8587 40.243H40.8327V47.627H39.4547V38.345H41.0537L47.0207 45.729H47.0467V38.345H48.4247V47.627H46.8257ZM50.512 44.117V38.345H51.89V44.286C51.89 45.872 52.8303 46.665 54.711 46.665C56.5916 46.665 57.532 45.872 57.532 44.286V38.345H58.91V44.117C58.91 46.613 57.5103 47.861 54.711 47.861C51.9116 47.861 50.512 46.613 50.512 44.117ZM66.5657 46.041L70.2837 38.345H72.1947V47.627H70.8167V39.931H70.7907L67.1767 47.627H65.9547L62.3537 40.087H62.3277V47.627H60.9497V38.345H62.8867L66.5657 46.041Z"
+                                            fill="#A8AAAC" />
+                                        <path
+                                            d="M78.6627 47.627V38.345H83.3687C84.7207 38.345 85.7433 38.761 86.4367 39.593C87.0953 40.373 87.4247 41.4606 87.4247 42.856C87.4247 44.26 87.117 45.378 86.5017 46.21C85.8083 47.1546 84.79 47.627 83.4467 47.627H78.6627ZM80.0407 46.431H83.3817C85.1583 46.431 86.0467 45.248 86.0467 42.882C86.0467 40.6546 85.0717 39.541 83.1217 39.541H80.0407V46.431ZM89.1913 47.627V38.345H90.5693V47.627H89.1913ZM92.8095 47.627V38.345H98.5555C99.4135 38.345 100.068 38.6093 100.519 39.138C100.9 39.58 101.091 40.139 101.091 40.815C101.091 42.011 100.571 42.7736 99.5305 43.103V43.129C99.9378 43.1896 100.259 43.3976 100.493 43.753C100.727 44.0996 100.857 44.5503 100.883 45.105C100.926 45.9976 100.969 46.587 101.013 46.873C101.073 47.2023 101.177 47.4536 101.325 47.627H99.8685C99.7645 47.5056 99.6952 47.3193 99.6605 47.068C99.6432 46.9293 99.6172 46.5263 99.5825 45.859C99.5392 45.053 99.3745 44.4896 99.0885 44.169C98.8112 43.8483 98.3778 43.688 97.7885 43.688H94.1875V47.627H92.8095ZM94.1875 42.492H98.0355C99.1535 42.492 99.7125 42.0023 99.7125 41.023C99.7125 40.035 99.1665 39.541 98.0745 39.541H94.1875V42.492ZM102.687 47.627V38.345H110.149V39.541H104.065V42.232H109.967V43.428H104.065V46.431H110.279V47.627H102.687ZM120.914 41.686H119.536C119.423 40.9926 119.111 40.4336 118.6 40.009C118.037 39.541 117.291 39.307 116.364 39.307C115.237 39.307 114.366 39.6233 113.751 40.256C113.101 40.9146 112.776 41.8636 112.776 43.103C112.776 44.091 113.04 44.9056 113.569 45.547C114.193 46.2923 115.099 46.665 116.286 46.665C118.08 46.665 119.163 45.8026 119.536 44.078H120.914C120.801 45.144 120.333 46.0323 119.51 46.743C118.635 47.4883 117.556 47.861 116.273 47.861C114.938 47.861 113.833 47.497 112.958 46.769C111.918 45.9023 111.398 44.6326 111.398 42.96C111.398 41.5473 111.814 40.399 112.646 39.515C113.521 38.579 114.726 38.111 116.26 38.111C117.395 38.111 118.375 38.358 119.198 38.852C120.238 39.4846 120.81 40.4293 120.914 41.686ZM125.093 47.627V39.541H121.583V38.345H129.981V39.541H126.471V47.627H125.093Z"
+                                            fill="#72C7F0" />
+                                    </g>
+                                    <defs>
+                                        <clipPath id="clip0_3101_219">
+                                            <rect width="131" height="53" fill="white" />
+                                        </clipPath>
+                                    </defs>
+                                </svg>
 
+                            </a>
+                        </div>
+                        <div class="footer-top__2">
+                            <nav class="footer-top__nav">
+                                <a href="#!">Products</a>
+                                <a href="#!">Business Types</a>
+                                <a href="#!">Who Are We?</a>
+                                <a href="#!">Contact Us</a>
+                                <a href="#!">Pricing</a>
+                            </nav>
+                        </div>
+                        <div class="footer-top__3">
+                            <a href="#!">
+                                <svg width="21" height="20" viewBox="0 0 21 20" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                        d="M18.4097 0H2.44298C1.34071 0 0.447144 0.89543 0.447144 2V18C0.447144 19.1046 1.34071 20 2.44298 20H10.4263V12.4706H7.4326V9.64706H10.4263V8.13082C10.4263 5.26024 11.9129 4 14.3431 4C15.4841 4 16.098 4.08142 16.3963 4.12097L16.4138 4.12329V6.82353H14.7563C13.7248 6.82353 13.4201 7.35812 13.4201 8.44047V9.64706H16.3879L15.9776 12.4706H13.4201V20H18.4097C19.512 20 20.4055 19.1046 20.4055 18V2C20.4055 0.89543 19.512 0 18.4097 0Z"
+                                        fill="white" fill-opacity="0.8" />
+                                </svg>
+                            </a>
+                            <a href="#!">
+                                <svg width="21" height="20" viewBox="0 0 21 20" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                        d="M6.35144 0H14.3348C17.6417 0 20.3224 2.68629 20.3224 6V14C20.3224 17.3137 17.6417 20 14.3348 20H6.35144C3.04461 20 0.363892 17.3137 0.363892 14V6C0.363892 2.68629 3.04461 0 6.35144 0ZM16.3307 3C16.8296 3 17.3286 3.5 17.3286 4C17.3286 4.5 16.8296 5 16.3307 5C15.8317 5 15.3327 4.5 15.3327 4C15.3327 3.5 15.8317 3 16.3307 3ZM15.3327 10C15.3327 7.2425 13.0949 5 10.3431 5C7.59135 5 5.3535 7.2425 5.3535 10C5.3535 12.7575 7.59135 15 10.3431 15C13.0949 15 15.3327 12.7575 15.3327 10ZM10.3431 7C8.68971 7 7.34935 8.34315 7.34935 10C7.34935 11.6569 8.68971 13 10.3431 13C11.9965 13 13.3369 11.6569 13.3369 10C13.3369 8.34315 11.9965 7 10.3431 7Z"
+                                        fill="white" fill-opacity="0.8" />
+                                </svg>
+                            </a>
+                            <a href="#!">
+                                <svg width="21" height="20" viewBox="0 0 21 20" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                        d="M18.2433 0H2.2766C1.17433 0 0.280762 0.89543 0.280762 2V18C0.280762 19.1046 1.17433 20 2.2766 20H18.2433C19.3456 20 20.2391 19.1046 20.2391 18V2C20.2391 0.89543 19.3456 0 18.2433 0ZM15.5991 6.23936C16.1789 6.1722 16.7312 6.02331 17.2455 5.80205C16.8613 6.35858 16.375 6.84744 15.8146 7.23946C15.8199 7.35868 15.8226 7.47842 15.8226 7.59868C15.8226 11.2685 12.9404 15.5 7.66821 15.5C6.04926 15.5 4.54314 15.0403 3.27452 14.2526C3.49912 14.2786 3.72748 14.2917 3.95853 14.2917C5.30184 14.2917 6.53769 13.8476 7.5183 13.1026C6.26419 13.0802 5.20566 12.2769 4.84082 11.1737C5.01545 11.2055 5.19545 11.2232 5.37975 11.2232C5.64143 11.2232 5.89505 11.1893 6.13523 11.1258C4.82362 10.8712 3.83602 9.74881 3.83602 8.40302V8.36814C4.22236 8.57587 4.66458 8.70081 5.1342 8.71539C4.36529 8.21769 3.85967 7.36753 3.85967 6.4044C3.85967 5.89472 4.00098 5.41784 4.24708 5.0076C5.66131 6.68813 7.77299 7.79391 10.1549 7.90948C10.1066 7.70697 10.0808 7.49456 10.0808 7.27694C10.0808 5.74374 11.3639 4.5 12.9469 4.5C13.7711 4.5 14.5159 4.83736 15.0387 5.37723C15.6921 5.25228 16.3057 5.02113 16.8591 4.70304C16.6453 5.35172 16.1912 5.89576 15.5991 6.23936Z"
+                                        fill="white" fill-opacity="0.8" />
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                    <hr class="footer-hreft">
+                    <div class="footer-warp__bottom">
+                        <div class="footer-bottom__left">
+                            <span>© 2021 Company</span>
+                        </div>
+                        <div class="footer-bottom__right">
+                            <span>Privacy policy</span>
+                            <span>FAQS</span>
+                            <span>Term of service</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </footer>
